<resources>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="app_name">Russian English Dictionary</string>
    <string name="home">Home</string>
    <string name="hint_search">Enter the word</string>
    <string name="phrasebook">PhraseBook</string>
    <string name="book1">PhraseBook 1</string>
    <string name="book2">PhraseBook 2</string>
    <string name="translator">Translator</string>
    <string name="translate_web">Web</string>
    <string name="nouns">Nouns</string>
    <string name="article">Article</string>
    <string name="pronoun">Pronoun</string>
    <string name="numberal">Numberal</string>
    <string name="adjective">Adjective</string>
    <string name="adverb">Adverb</string>
    <string name="verb">Verb</string>
    <string name="preposition">Preposition</string>
    <string name="conjunction">Conjunction</string>
    <string name="particles">Particles</string>
    <string name="interjection">Interjection</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="history">History</string>
    <string name="favorite">Favorites</string>
    <string name="general">General expressions</string>
    <string name="conversation">Conversation</string>
    <string name="about_me">About me</string>
    <string name="trip">Trip</string>
    <string name="city">In the city</string>
    <string name="hotel">Hotel</string>
    <string name="service">Services</string>
    <string name="guest">In guests</string>
    <string name="money_bussi">Money. Business</string>
    <string name="food_drink">Food and drinks</string>
    <string name="shopping">Shopping</string>
    <string name="entertainment">Entertainment</string>
    <string name="sport">Sport</string>
    <string name="tour">Tour</string>
    <string name="journey">Journey</string>
    <string name="transport">Transport</string>
    <string name="phone_mail">Phone. Mail</string>
    <string name="health">Health</string>
    <string name="problem">Problems</string>
    <string name="number">Numbers</string>
    <string name="time_date">Time and date</string>
    <string name="color">Colours</string>
    <string name="weather">Weather</string>
    <string name="question">Questions</string>
    <string name="inscription_sign">Inscriptions and signs</string>
    <string name="common_phrases">Common Phrases</string>
    <string name="meeting_communication">Meeting. Communication</string>
    <string name="trip_journey">Trip. Journey</string>
    <string name="hotel_service">Hotel. Service</string>
    <string name="cafe_restau">Cafe. Restaurant</string>
    <string name="city_transport">City. Transport</string>
    <string name="telephone_mail">Telephone. Mail</string>
    <string name="bank_money">Bank. Money</string>
    <string name="business_communication">Business Communication</string>
    <string name="entertainment_sport">Entertainment. Sport</string>
    <string name="miscellaneous">Miscellaneous</string>
    <string name="general_information">General Information</string>
    <string name="plurals">Plurals</string>
    <string name="nouns_sentence">Nouns in Sentence</string>
    <string name="indefinite_article">Indefinite Article</string>
    <string name="definite_article">Definite Article</string>
    <string name="no_article">No Article</string>
    <string name="use_pronoun">The Use of Pronouns</string>
    <string name="pronoun_sentence">Pronouns in Sentence</string>
    <string name="cardinal_numberal">Cardinal Numberals</string>
    <string name="ordinal_numberal">Ordinal Numberals</string>
    <string name="numberal_sentence">Numberals in Sentence</string>
    <string name="degrees_comparison">Degrees of comparison</string>
    <string name="adj_sentence">Adjective in Sentence</string>
    <string name="classification_adv">Classification of Adverbs</string>
    <string name="adv_sentence">Adverb in Sentence</string>
    <string name="personal_verb">Personal/impersonal Verbs</string>
    <string name="regular_verb">Regular/Irregular Verbs</string>
    <string name="transitive_verb">Transitive/Intransitive Verbs</string>
    <string name="person_number">Person and Number</string>
    <string name="others">Others</string>
    <string name="frequently">Frequently Used</string>
    <string name="preposition_sentence">Preposition in Sentence</string>
    <string name="coordinative_conjunction">Coordinative Conjunctions</string>
    <string name="subrdinative_conjunction">Subordinative Conjunctions</string>
    <string name="difference_particle">Difference of Particles</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="rate">Rate</string>
    <string name="content_about">Language assistants can improve your students’ language skills,as well as
        developing their cultural awareness and understanding of the world.</string>
    <string name="close">Close</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="fast_key">Fast key</string>

    <string name="mss_request_internet_for_translate">Please turn on the network connection to use the translate function and try again</string>
    <string name="title_no_internet">No Internet connection</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="my_own_cancel">Cancel</string>
    <string name="my_own_message">Do you want to rate this application?</string>
    <string name="my_own_rate">Ok</string>
    <string name="my_own_thanks">Don\'t show again</string>
    <string name="my_own_title">Rate</string>
    <string name="YOUR_API_KEY">AIzaSyCesRSQ_xOlB489lpIZvOxSBFRPv6a_lNk</string>
</resources>
