<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item
            android:id="@+id/nav_search"
            android:icon="@drawable/ic_search"
            android:title="@string/search"
            android:showAsAction="always|withText"/>
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/history"
            android:showAsAction="always|withText"/>
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/favorite"
            android:showAsAction="always|withText"/>
        <item
            android:id="@+id/transator"
            android:checked="false"
            android:icon="@drawable/icon_translator"
            android:title="@string/translator"
            android:showAsAction="always|withText"/>
        <item
            android:id="@+id/traslate_web"
            android:icon="@drawable/ic_web"
            android:title="@string/translate_web"
            android:showAsAction="always|withText"/>
    </group>

</menu>